@@ -54,7 +54,8 @@ exports.main = function() {
                 prefSet.prefs.region7,
                 prefSet.prefs.region8,
                 prefSet.prefs.region9,
-                prefSet.prefs.showACRTAG
+                prefSet.prefs.showACRTAG,
+                prefSet.prefs.showsteamrepapi
             ]);
         },
         contentScriptOptions: {
